fixed some page spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 
-body { 
+body, html { 
   font-family: 'Raleway', sans-serif;
   background-image: url("wallpaper.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100%;
+  min-height: 101%;
 }
 
 #content, #header, #menubar, #footer {
@@ -149,7 +149,6 @@ a {
   float: left;
   width: 18%;
   height: 18%;
-  padding-top: 12px;
   padding-left: 6px;
   padding-right: 40px;
 }
